tests/machine/x/pascal/partial_application.error
line: 23
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/partial_application.pas
partial_application.pas(20,11) Error: Wrong number of parameters specified for call to "add"
partial_application.pas(10,10) Error: Found declaration: add(LongInt;LongInt):LongInt;
partial_application.pas(23) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

